[package]
name = "graveyard_generator"
version = "0.1.0"
authors = ["destruc7i0n <destruc7i0n@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
glob = "0.3.0"
version-compare = "0.0.11"
rayon = "1.5"
